--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,15 @@
 <h1>Create an article</h1>
 
-<%= form_for @articles do |f| %>
+<% if @article.errors.any? %>
+    <h1>The following errors occured :</h1>
+    <ul>
+        <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+    </ul>
+<% end %>
+
+<%= form_for @article do |f| %>
     <p>
         <%= f.label :title %><br>
         <%= f.text_field :title %>
