--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,8 @@
 <p>
     Description : <%= @article.description %>
 </p>
+<p>
+    <%= link_to "Back", articles_path %>|
+    <%= link_to "Edit", edit_article_path(@article) %>
+    
+</p>
