Added destroy and Partials

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,9 +32,7 @@
         </div>
         <div id="footer">
             <ul>
-                <li>HOME</li>
-                <li><%= link_to 'about', about_path %></li>
-                <li>CONTACT</li>
+                <li><%= link_to "Articles", articles_path %></li>
             </ul>
         </div>
     </body>
