styling of home page and form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,4 @@
-<DOCTYPEhtml>
-<html>
-    <head>
-        <title>AphaBlog</title>
-        <%= stylesheet_link_tag "home" %>
-    </head>
-    <body>
-        <div id="header">
-            <h1>AphaBlog</h1>
-        </div>
-        <div class="container">
-            <p>fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio</p>
-        </div>
-        <div class="container">
-            <p>fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio
-            fdjfhfhjrewhfliwhfliowhfiwofwfowhfiohwfio</p>
-        </div>
-        <div id="footer">
-            <ul>
-                <li><%= link_to "Articles", articles_path %></li>
-            </ul>
-        </div>
-    </body>
-</html>
+<div class = "center jumbotron">
+        <h1>AlphaBlog</h1>
+        <%= link_to "Sign Up", "#", class: "btn  btn-primary btn-xlarge" %>
+</div>
