--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<b   !DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>AlphaBlog</title>
@@ -7,8 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <%= render 'layouts/navigations' %>
   <%= render 'layouts/messages' %>
-
-
+  <% if current_page?(:controller => 'pages', :action => 'home') %>
+      <%= yield %>
+    <% else %>
+      <div class= "container">
+        <%= yield %>
+      </div>
+    <% end %>
+    
+    <%= render 'layouts/footer' %>
 </body>
 </html>
