--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,3 +70,17 @@ footer li {
     float: left;
     margin-left: 15px;
 }
+
+.panel-title {
+    font-weight: bold;
+}
+
+.article_actions {
+border-top: 1px solid #eaeaea;
+padding-top: 5px;
+
+}
+
+.description {
+margin-top: 0;
+}
