--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,9 +4,9 @@
     <%= simple_format( @article.description) %>
     <div class = "article_actions">
         <div class="btn-group" role="group" aria-label="...">
-        <%= link_to "Back", articles_path, class: "btn btn-default btn-sm" %>
-        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-default btn-sm" %>
-        <%= link_to "Delete", article_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-sm" %>
+        <%= link_to "Back", articles_path, class: "btn btn-default btn-xs" %>
+        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-default btn-xs" %>
+        <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
         </div>
     </div>
 </div>
