--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,7 +8,7 @@
                 <div class= "control-label col-sm-2">
                     <%= f.label :title %>
                 </div>
-                <div class= "col-sm-8">
+                <div class= "col-xs-8">
                     <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
                 </div>
             </div>
