--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,19 @@
-<h1>Listing all the articles</h1>
+<h1 align = "center">Listing all the articles</h1>
+<div class = "row">
+    <div class = "col-xs-8 col-xs-offset-2">
+        <% @articles.each do |article| %>
+            <div class = "well well-lg well-extended">
+                <h4 class = "article-title"><%= link_to article.title, article_path(article) %></h4>
+                <div class = "article-body"><%= truncate(article.description, length: 100) %></div>
+                <div class = "article_actions">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <%= link_to "Edit", edit_article_path(article), class: "btn btn-default btn-xs" %>
+                        <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+                    </div>
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
 
-<p>
-    <%= link_to "Create new article", new_article_path %>
-</p>
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-    <% @articles.each do |article| %>
-    <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to "Edit", edit_article_path(article) %></td>
-        <td><%= link_to "Show", article_path(article) %></td>
-        <td><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure" } %></td>
-    </tr>
-    <% end %>
-</table>
