fixed the extended horizontal bar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,7 +69,6 @@ footer ul {
 
 footer li {
     float: left;
-    margin-left: 15px;
 }
 
 .panel-title {
@@ -102,4 +101,7 @@ padding-bottom: 15px;
     margin-left: -30px;
 }
 
+.messages-edited {
+    overflow: hidden;
+}
 
