--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 <div class = "row">
     <div class = "col-xs-8 col-xs-offset-2">
         <% @articles.each do |article| %>
-            <div class = "well well-lg well-extended">
+            <div class = "well well-lg well-extende">
                 <h4 class = "article-title"><%= link_to article.title, article_path(article) %></h4>
                 <div class = "article-body"><%= truncate(article.description, length: 100) %></div>
                 <div class = "article_actions">
