--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       </div>
     <% end %>
     
+    <%= debug(params) if Rails.env.development? %>
     <%= render 'layouts/footer' %>
 </body>
 </html>
