added secure password function to user

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -102,4 +102,9 @@ padding-bottom: 15px;
     margin-left: -30px;
 }
 
+.timestamp-reading {
+    border-top: 1px solid #eaeaea;
+    margin-top: 5px;
+    padding: 10px;
+}
 
