--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,26 @@
 <h2 align = "center">title :<%= @article.title%></h2>
-<div class = "well col-xs-8 col-xs-offset-2">
-    <h4 class = "center description"><strong>Description</strong></h4>
-    <%= simple_format( @article.description) %>
-    <div class = "article_actions">
-        <div class="btn-group" role="group" aria-label="...">
-        <%= link_to "Back", articles_path, class: "btn btn-default btn-xs" %>
-        <%= link_to "Edit", edit_article_path(@article), class: "btn btn-default btn-xs" %>
-        <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+<% if @article.user %>
+    <div class = "rows center">
+        <div class = "col-sm-2 col-sm-offset-1">
+            <h4>Created By</h4>
+            <div class = "listing">
+                <li><%= link_to ( gravatar_for @article.user ), user_path(@article.user) %></li>
+                <li><%= link_to @article.user.username, user_path(@article.user) %></li>
+            </div>
+        </div>
+    </div>
+<% end %>
+<div class = "rows">
+    <div class = "well col-sm-6">
+        <h4 class = "center description"><strong>Description</strong></h4>
+        <%= simple_format( @article.description) %>
+        <div class = "article_actions">
+            <div class="btn-group" role="group" aria-label="...">
+            <%= link_to "Back", articles_path, class: "btn btn-default btn-xs" %>
+            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-default btn-xs" %>
+            <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+            </div>
         </div>
     </div>
 </div>
+
