--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <div class = "rows center">
     <h3>Users</h3>
     <div class = "col-sm-4 col-sm-offset-4">
+        <%= will_paginate @user %>
         <% @user.each do |user| %>
             <div class = "well well-lg">
                 <div class = "listing">
@@ -10,5 +11,7 @@
                 </div>
             </div>
         <% end %>
+        <%= will_paginate @user %>
     </div>
+    
 </div>
