--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <h1 align="center">Welcome to <%= @user.username %>'s page</h1>
-<div class = "row">
-    <div class = "col-sm-4 col-sm-offset-4 center">
+<div class = "row center">
+    <div class = "col-sm-4 col-sm-offset-4">
         <%= gravatar_for @user, size: 150 %>
         <h3>Articles By <%= @user.username %></h3>
+        <%= will_paginate @user_paginate %>
     </div>
-    <%= render 'articles/article', obj: @user.articles %>
+    <%= render 'articles/article', obj: @user_paginate %>
+    <%= will_paginate @user_paginate %>
 </div>
