--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class = "center jumbotron">
         <h1>Alpha<br>Blog</h1>
-        <%= link_to "Sign Up", signup_path , class: "btn  btn-primary btn-xlarge" %>
+        <div class="btn-group" role="group" aria-label="...">
+                <%= link_to "SignUp", signup_path , class: "btn  btn-primary btn-xlarge" %>
+                <%= link_to " Login", login_path , class: "btn  btn-primary btn-xlarge" %>
+        </div>
 </div>
