--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1 align="center">Welcome to <%= @user.username %>'s page</h1>
-<div class = "row center">
+<div class = "center">
     <div class = "col-sm-4 col-sm-offset-4">
         <%= gravatar_for @user, size: 150 %>
         <h3>Articles By <%= @user.username %></h3>
@@ -7,4 +7,13 @@
     </div>
     <%= render 'articles/article', obj: @user_paginate %>
     <%= will_paginate @user_paginate %>
+    <% if @user.articles.count == 0 %>
+        <div class = "row">
+            <div class = "col-sm-8 col-sm-offset-2">
+                <div class = "well well-lg">
+                    <div class = "article-body">No Articles created by this user yet</div>
+                </div>
+            </div>
+        </div>
+    <% end %>
 </div>
