--- a/app/views/layouts/_navigations.html.erb
+++ b/app/views/layouts/_navigations.html.erb
@@ -17,20 +17,14 @@
         <li><%= link_to "Articles", articles_path %></li>
         <li><%= link_to "Users", users_path %><span class="sr-only">(current)</span></a></li>
         <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions<span class="caret"></span></a>
-            <ul class="dropdown-menu">
               <li><%= link_to "Create new Article", new_article_path %></li>
-              <li role="separator" class="divider"></li>
-            </ul>
-          </li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
         <li><%= link_to "Logout", logout_path, method: :delete %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <% if current_user.admin? %>Admin<% end %><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Edit Your Profile", edit_user_path(current_user) %></li>
             <li><%= link_to "Show Your Profile", user_path(current_user) %></li>
