--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,10 @@
                     <li><%= link_to (gravatar_for user), user_path(user)%></li>
                     <li><%= link_to user.username, user_path(user) %></li>
                     <li><%= link_to pluralize( user.articles.count, "Article"), user_path(user) %></li>
+                    <% if current_user.admin? %>
+                        <li><%= link_to "Delete User", user_path(user), method: :delete,
+                                data: { confirm: "Are you sure you want to delete the user and all their articles" } %></li>
+                    <% end %>
                 </div>
             </div>
         <% end %>
