--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,6 +18,7 @@
                             <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
                         </div>
                     </div>
+                    <%= link_to "like" ,"#" %>
                 <% end %>
             </div>
         <% end %>
